--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.3.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
